allprojects {
    group "dev.prozilla"
}

subprojects {
    apply plugin: "java"

    java {
        toolchain {
            languageVersion.set(JavaLanguageVersion.of(21))
        }
    }

    repositories {
        mavenCentral()
        maven {
            url "https://repo.gradle.org/gradle/libs-releases"
        }
    }

    sourceSets {
        main {
            resources {
                srcDir "src/main/resources"
            }
        }
    }

    tasks.processResources {
        duplicatesStrategy = DuplicatesStrategy.EXCLUDE
    }
}